tests/__snapshots__/validation-target-no-supported-versions-matching-stderr.snap.txt
Error: The specified range '>=4.4 <4.7' does not match any supported TypeScript versions.

Use the '--list' command line option to inspect the list of supported versions.

  1 | {
  2 |   "target": ">=4.4 <4.7",
    |             ~~~~~~~~~~~~
  3 |   "testFileMatch": [
  4 |     "examples/*.tst.*"
  5 |   ]

      at ./tstyche.config.json:2:13

